<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gudang"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_bawang"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/TV1" />

        <EditText
            android:id="@+id/bawangEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/TV2" />

        <TextView
            android:id="@+id/TV3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_kobis"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/bawangEt" />

        <EditText
            android:id="@+id/kobisEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV3" />

        <Button
            android:id="@+id/hitungBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hitung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kobisEt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
